2008-04-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google
	search within EmacsWiki.

2008-04-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add the variables definition of `w3m-bookmark-mode',
	`w3m-bookmark-menu-items', `w3m-bookmark-menu-items-pre' and
	`w3m-tab-menubar-make-items-preitems' avoid byte-compile warnings.
	(w3m-rmouse-menubar): New user option.
	(w3m-setup-menu): Add the setup of `w3m-rmouse-menubar'.
	(w3m-mouse-major-mode-menu): Rewrite to use `w3m-rmouse-menubar'.
	(w3m-link-menu): Add `w3m-external-view-this-url'.

2008-04-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-turnoff-inline-images): New command.
	(w3m-toggle-inline-images): If force is 'turnoff, turn off to display
	images.
	(w3m-menubar): Add w3m-turnoff-inline-images.
	(w3m-lynx-like-map): Ditto.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Ditto.

2008-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Fix custom type.

2008-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Support Google search
	within EmacsWiki.  cf. [emacs-w3m:10067]

2008-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mouse-safe-view-this-url): Remove redundant confirmation
	of whether to follow link.

2008-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-doc-view-content-types): New variable.
	(w3m-doc-view): New function.
	(w3m-create-page): Use it.
	(w3m-content-type-alist): Add application/dvi.
	(w3m-delete-buffer): Save windows layout.

2008-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-image.el (w3m-imagick-convert-program-available-p): Don't use
	w3m-imagick-convert-data which may issue a warning when checking
	whether the convert program supports png32.  cf. [emacs-w3m:10048]

2008-03-03  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m.texi (Inline Images): Updated.

	* doc/emacs-w3m-ja.texi (Inline Images): Ditto.
